Fixed spacing on group page

--- a/frontend/src/components/GroupPage/GroupPage.css
+++ b/frontend/src/components/GroupPage/GroupPage.css
@@ -6,6 +6,7 @@
   border-bottom: solid 1px lightgray;
   border-top: solid 1px lightgray;
   padding: 1.5% 0;
+  border: 1px solid red;
 }
 .group-details-header {
   display: flex;
@@ -58,7 +59,6 @@
 .group-details-nav-bar-buttons {
   display: flex;
   width: 60%;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -70,6 +70,8 @@
   margin: 0;
   padding: 0;
   height: fit-content;
+  border: 1px solid red;
+  margin-right: 2.5rem;
 }
 .group-page-navLinks > span {
   vertical-align: middle;
